--- a/templates/sent_offers.html
+++ b/templates/sent_offers.html
@@ -1,5 +1,6 @@
 {% extends "my_offers.html" %}
 {% block title %}C2CLoans &#8212; {{ user.username }} &#8212; sent offers{% endblock %}
+{% block page_heading %}Sent Offers{% endblock %}
 
 {% block username_label %}Offered to{% endblock %}
 {% block fullname_label %}Applicant name{% endblock %}
