--- a/templates/apply.html
+++ b/templates/apply.html
@@ -1,5 +1,6 @@
 {% extends "profile.html" %}
 {% block title %}C2CLoans &#8212; apply for a loan{% endblock %}
+{% block page_heading %}Apply for a Loan{% endblock %}
 {% load crispy_forms_tags %}
 {% block profile_heading %}Apply for loan{% endblock %}
 {% block form %}
