--- a/templates/base.html
+++ b/templates/base.html
@@ -1,97 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {% load static %}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <script src="https://kit.fontawesome.com/26cb6de012.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/26cb6de012.js" crossorigin="anonymous"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
-    <title>{% block title %} C2CLoans {% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
+  <title>{% block title %} C2CLoans {% endblock %}</title>
+  {% block extra_head %}
+  {% endblock %}
 </head>
+
 <body>
-    {% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
-        <a class="navbar-brand" href="{% url 'core:home' %}">
-            <img class="brand-logo" src="{% static 'assets/logo.png' %}">
-            C2C Loans
-        </a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    {% url 'core:home' as url %}
-                    <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    {% url 'core:home' as url %}
-                    <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
-                        About
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    {% url 'core:home' as url %}
-                    <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
-                        Contact Us
-                    </a>
-                </li>
-                {% if user.is_authenticated%}
-                <li>
-                    <a class="nav-link dropdown-toggle" href="{% url 'account_login' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{ user.username }}
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url 'account_login' %}">My profile</a>
-                        <a class="dropdown-item" href="{% url 'core:my_loans' %}">My loans</a>
-                        <a class="dropdown-item" href="{% url 'core:my_offers' %}">My offers</a>
-                        <a class="dropdown-item" href="{% url 'core:sent_offers' %}">Sent offers</a>
-                        <a class="dropdown-item" href="{% url 'core:apply_loan' %}">Apply for a loan</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
-                    </div>
-                </li>
-                {% else %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{% url 'account_login' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Sign in
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
-                        <a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a>
-                    </div>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-    {% if messages %}
-      <div class="row w-100 text-center m-0 p-0">
-        <div class="col-md-12">
-          {% for message in messages %}
-          <div class="alert alert-{{ message.tags }} alert-dismissable" role="alert">
-              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-              {{ message }}
+  {% block navbar %}
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+    <a class="navbar-brand" href="{% url 'core:home' %}">
+      <img class="brand-logo" src="{% static 'assets/logo.png' %}">
+      C2C Loans
+    </a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          {% url 'core:home' as url %}
+          <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
+            Home
+          </a>
+        </li>
+        <li class="nav-item active">
+          {% url 'core:home' as url %}
+          <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
+            About
+          </a>
+        </li>
+        <li class="nav-item active">
+          {% url 'core:home' as url %}
+          <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
+            Contact Us
+          </a>
+        </li>
+        {% if user.is_authenticated%}
+        <li>
+          <a class="nav-link dropdown-toggle" href="{% url 'account_login' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user.username }}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'account_login' %}">My profile</a>
+            <a class="dropdown-item" href="{% url 'core:my_loans' %}">My loans</a>
+            <a class="dropdown-item" href="{% url 'core:my_offers' %}">My offers</a>
+            <a class="dropdown-item" href="{% url 'core:sent_offers' %}">Sent offers</a>
+            <a class="dropdown-item" href="{% url 'core:apply_loan' %}">Apply for a loan</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
           </div>
-          {% endfor %}
+        </li>
+        {% else %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="{% url 'account_login' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sign in
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+            <a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a>
+          </div>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+  {% if messages %}
+  <div class="row w-100 text-center m-0 p-0">
+    <div class="col-md-12">
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        {{ message }}
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+  {% endif %}
+  {% endblock %}
+
+  <div class="container {% block extra_container_class %}{% endblock %}">
+    {% if user.is_authenticated %}
+    <div class="profile-info w-100 shadow-sm">
+      <div class="signed-in-as shadow-sm"><p class="m-0">Logged in as</p></div>
+      <img class="rounded-circle profile-photo" src="{{ user.profile.photo.url }}">
+      <div>
+        <div class="text-start">
+          <h4>
+            {% if user.profile.first_name %}
+            {{ user.profile.first_name }}
+            {% if user.profile.middle_name %} {{ user.profile.middle_name }} {% endif %}
+            {{ user.profile.last_name }}
+            {% else %}
+            Guest
+            {% endif %}
+          </h4>
+        </div>
+        <div class="username text-start">
+          <p>{{ user.username }}{% if user.email %} &#8212; {{ user.email }} {% endif %}</p>
         </div>
       </div>
-    {% endif %}
-    {% endblock %}
-
-    <div class="container {% block extra_container_class %}{% endblock %}">
-        {% block content  %}
-        {% endblock content %}
     </div>
+    {% endif %}
+    <div class="page-heading">
+      <h4>{% block page_heading %}{% endblock %}</h4>
+    </div>
+    {% block content  %}
+    {% endblock content %}
+  </div>
 </body>
+
 </html>
