--- a/templates/my_loans.html
+++ b/templates/my_loans.html
@@ -1,5 +1,6 @@
 {% extends "home.html" %}
 {% block title %}C2CLoans &#8212; {{ user.username }} &#8212; my loans{% endblock %}
+{% block page_heading %}My Loans{% endblock %}
 {% block header_action %}
 #
 {% endblock %}
