--- a/templates/my_offers.html
+++ b/templates/my_offers.html
@@ -1,5 +1,6 @@
 {% extends "home.html" %}
 {% block title %}C2CLoans &#8212; {{ user.username }} &#8212; my offers{% endblock %}
+{% block page_heading %}My Offers{% endblock %}
 {% block content %}
 {% for offer in offers %}
 {% block with_outer_block %}
@@ -61,4 +62,14 @@
 </div>
 {% endblock %}
 {% endfor %}
+{% block pagination %}
+<div class="mt-3">
+	{% if loans.has_previous %}
+	<button href="{% url 'core:home' offers.previous_page_number %}">Previous Page</button>
+	{% endif %}
+	{% if loans.has_next %}
+	<button href="{% url 'core:home' offers.next_page_number %}">Next Page</button>
+	{% endif %}
+</div>
+{% endblock %}
 {% endblock %}
