Add default photo and fix container layout

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,10 +4,9 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block page_heading %}Signup{% endblock %}
 
 {% block content %}
-
-<h1>{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? <a href="{{ login_url }}">Login</a>.{% endblocktrans %}</p>
 
