--- a/static_files/style.css
+++ b/static_files/style.css
@@ -56,7 +56,6 @@ input[type=checkbox]:checked {
 	box-shadow: none;
 }
 .container {
-	margin-top: 10%;
 	padding-top: 60px;
 	padding-bottom: 60px;
 	padding-right: 30px;
@@ -67,6 +66,8 @@ input[type=checkbox]:checked {
 	min-height: 100%;
 	background-color: white;
 	box-shadow: 0 0 3px 0 var(--shadow);
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 .container > h1 {
 	text-decoration: underline;
