--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,10 +5,9 @@
 {% load account socialaccount %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block page_heading %}Login{% endblock %}
 
 {% block content %}
-
-  <h1>{% trans "Login" %}</h1>
 
   {% get_providers as socialaccount_providers %}
 
