--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
     {% endblock %}
   </div>
   <div class="col-md-12 text-center">
-    <button id="update-form" class="primaryAction" type="submit">Save</button>
+    <button id="update-form" class="primaryAction" type="submit">{% block btn_txt %}Save{% endblock %}</button>
   </div>
 </form>
 {% endblock %}
