--- a/static_files/style.css
+++ b/static_files/style.css
@@ -30,6 +30,7 @@ a {
 a:hover {
 	color: black;
 }
+.btn-link,
 .button,
 button {
 	background-color: var(--back);
@@ -40,7 +41,9 @@ button {
 	border: none;
 	border-radius: 5px;
 	transition: 0.2s;
+	text-decoration: none;
 }
+.btn-link:hover,
 .button:hover,
 button:hover {
 	background-color: black;
