--- a/templates/home.html
+++ b/templates/home.html
@@ -21,12 +21,14 @@
 		{% block extra_header_actions %}
     	<a class="button accept" href="{% url 'core:accept_loan' %}?id={{ loan.loan_id }}">Accept</a>
     	<a class="button reject" href="#">Reject</a>
-    	{% endblock %}
+    {% endblock %}
+    {% block default_header_action %}
     	<a class="button" href="
     	{% block header_action %}
     	{% url 'core:modify_loan' %}?id={{ loan.loan_id }}
     	{% endblock %}
     	">{% block header_action_text %}Modify{% endblock %}</a>
+    {% endblock %}
     </div>
   </div>
   <div class="card-body row">
@@ -63,10 +65,10 @@
 {% block pagination %}
 <div class="mt-3">
 	{% if loans.has_previous %}
-	<button href="{% url 'core:home' loans.previous_page_number %}">Previous Page</button>
+	<a class="btn-link" href="{% block prev_page_url %}{% url 'core:home_page' loans.previous_page_number %}{% endblock %}">Previous Page</a>
 	{% endif %}
 	{% if loans.has_next %}
-	<button href="{% url 'core:home' loans.next_page_number %}">Next Page</button>
+	<a class="btn-link" href="{% block next_page_url %}{% url 'core:home_page' loans.next_page_number %}{% endblock %}">Next Page</a>
 	{% endif %}
 </div>
 {% endblock %}
