--- a/templates/lent_loans.html
+++ b/templates/lent_loans.html
@@ -1,14 +1,11 @@
-{% extends "home.html" %}
-{% block title %}C2CLoans &#8212; {{ user.username }} &#8212; my loans{% endblock %}
-{% block page_heading %}My Loans{% endblock %}
-{% block extra_header_actions %}
-{% endblock %}
-{% block header_action_text %}
-Check Offers
-{% endblock %}
+{% extends "my_loans.html" %}
+{% block title %}C2CLoans &#8212; {{ user.username }} &#8212; lent loans{% endblock %}
+{% block page_heading %}Lent Loans{% endblock %}
+{% block extra_header_actions %}{% endblock %}
+{% block default_header_action %}{% endblock %}
 {% block empty_message %}
 <div class="empty-mssg">
-	<p>Nothing here. <a href="{% url 'core:apply_loan' %}">Apply</a> for your first loan</p>
+	<p>Nothing here.</p>
 </div>
 {% endblock %}
 {% block pagination %}
