--- a/templates/my_offers.html
+++ b/templates/my_offers.html
@@ -65,10 +65,10 @@
 {% block pagination %}
 <div class="mt-3">
 	{% if loans.has_previous %}
-	<button href="{% url 'core:home' offers.previous_page_number %}">Previous Page</button>
+	<button href="{% url 'core:my_offers_page' offers.previous_page_number %}">Previous Page</button>
 	{% endif %}
 	{% if loans.has_next %}
-	<button href="{% url 'core:home' offers.next_page_number %}">Next Page</button>
+	<button href="{% url 'core:my_offers_page' offers.next_page_number %}">Next Page</button>
 	{% endif %}
 </div>
 {% endblock %}
