--- a/templates/sent_offers.html
+++ b/templates/sent_offers.html
@@ -1,6 +1,16 @@
 {% extends "my_offers.html" %}
 {% block title %}C2CLoans &#8212; {{ user.username }} &#8212; sent offers{% endblock %}
 {% block page_heading %}Sent Offers{% endblock %}
+{% block pagination %}
+<div class="mt-3">
+	{% if loans.has_previous %}
+	<a class="btn-link" href="{% block prev_page_url %}{% url 'core:sent_offers_page' loans.previous_page_number %}{% endblock %}">Previous Page</a>
+	{% endif %}
+	{% if loans.has_next %}
+	<a class="btn-link" href="{% block next_page_url %}{% url 'core:sent_offers_page' loans.next_page_number %}{% endblock %}">Next Page</a>
+	{% endif %}
+</div>
+{% endblock %}
 
 {% block username_label %}Offered to{% endblock %}
 {% block fullname_label %}Applicant name{% endblock %}
