--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li class="nav-item active">
-          {% url 'core:home' as url %}
+          {% url 'core:about' as url %}
           <a class="nav-link {% if request.path == url %} active {% endif %}" href="{{ url }}">
             About
           </a>
@@ -115,7 +115,7 @@
       </div>
     </div>
     {% endif %}
-    <div class="page-heading">
+    <div class="page-heading d-flex flex-column">
       <h2>{% block page_heading %}{% endblock %}</h2>
     </div>
     {% block content  %}
