Update about page and navbar

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block title %}C2Cloans &#8212; about{% endblock %}
-{% block page_heading %}
-About
-{% endblock %}
+{% block page_heading %}About{% endblock %}
 {% block extra_container_class %}align-items-start no-min-height{% endblock %}
 {% block content %}
 <div>
@@ -20,6 +18,6 @@ About
     <img height="35px" style="margin-bottom:3px; margin-right:5px" alt="Github page" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" />
     Github
   </a>
-  <img height="50px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/GPLv3_Logo.svg/320px-GPLv3_Logo.svg.png">
+  <a href="https://github.com/bitgato/c2cloan/blob/main/LICENSE"><img height="50px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/GPLv3_Logo.svg/320px-GPLv3_Logo.svg.png"></a>
 </div>
 {% endblock %}
