--- a/static_files/style.css
+++ b/static_files/style.css
@@ -173,7 +173,7 @@ input[type=checkbox]:checked {
 	top: 0;
 	left: 0;
 	background-color: var(--gray);
-	padding: 3px 10px 5px 10px;
+	padding: 3px 10px 5px;
 	margin: 0;
 	border-bottom-right-radius: 5px;
 }
@@ -185,7 +185,7 @@ input[type=checkbox]:checked {
 	width: 100%;
 }
 .alert {
-	padding: 0px;
+	padding: 0;
 }
 .close,
 .close:hover {
