--- a/templates/about.html
+++ b/templates/about.html
@@ -10,14 +10,14 @@
   <h3>Written by</h3>
   <p class="about-p">Adnan Aslam (<a style="text-decoration: underline;" href="https://github.com/bitgato">bitgato</a>)</p>
 </div>
-<div class="d-flex flex-row">
-  <a class="btn btn-heroku" href="https://c2cloan.herokuapp.com" role="button" style="text-transform:none">
+<div class="about-links">
+  <a class="btn-heroku" href="https://c2cloan.herokuapp.com" role="button" style="text-transform:none">
     <img width="100px" style="margin-bottom:3px; margin-right:5px" alt="Heroku deployment" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Heroku_logo.svg/320px-Heroku_logo.svg.png" />
   </a>
-  <a class="btn btn-github" href="https://github.com/bitgato/c2cloan" role="button" style="text-transform:none">
+  <a class="btn-github" href="https://github.com/bitgato/c2cloan" role="button" style="text-transform:none">
     <img height="35px" style="margin-bottom:3px; margin-right:5px" alt="Github page" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/240px-Octicons-mark-github.svg.png" />
     Github
   </a>
-  <a href="https://github.com/bitgato/c2cloan/blob/main/LICENSE"><img height="50px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/GPLv3_Logo.svg/320px-GPLv3_Logo.svg.png"></a>
+  <a href="https://github.com/bitgato/c2cloan/blob/main/LICENSE"><img height="40px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/GPLv3_Logo.svg/320px-GPLv3_Logo.svg.png"></a>
 </div>
 {% endblock %}
