Add borrowed loans page for a user

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
             <a class="dropdown-item" href="{% url 'account_login' %}">My profile</a>
             <a class="dropdown-item" href="{% url 'core:my_loans' %}">My loans</a>
             <a class="dropdown-item" href="{% url 'core:lent_loans' %}">Lent loans</a>
+            <a class="dropdown-item" href="{% url 'core:borrowed_loans' %}">Borrowed loans</a>
             <a class="dropdown-item" href="{% url 'core:my_offers' %}">My offers</a>
             <a class="dropdown-item" href="{% url 'core:sent_offers' %}">Sent offers</a>
             <a class="dropdown-item" href="{% url 'core:apply_loan' %}">Apply for a loan</a>
